navbar, footer  and index updated

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>Bootstrap 101 Template</title>
+<title>We make music | Musicophone </title>
 
 <!-- Bootstrap -->
+<script src="https://use.fontawesome.com/89454cd725.js"></script>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/bootstrap-darkly.min.css">
 <link href="css/styles.css" rel="stylesheet">
@@ -28,7 +29,7 @@
       
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1" ><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="#">Brand</a> </div>
+        <a class="navbar-brand" href="#">Musicophone.com</a> </div>
       
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="defaultNavbar1">
@@ -59,10 +60,82 @@
     <!-- /.container-fluid --> 
   </nav>
 </header>
+<!-- End of header and navbar -->
 
-<footer class="site-footer">
+<!-- Start of Start-Page Content -->
+
+<div class="heroimg">
+<img class="img-responsive hidden-xs hidden-sm" src="images/heroimg.png" alt="...">
+<h2 class="mobile-header text-center visible-xs visible-sm">We Make Music</h2>
+
+	<div class="container start-panels hidden-lg">
+  <div class="row">
+    <div class="col-xs-6">
 	
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">New classes!</div>
+        </div>
+        <div class="panel-body">
+          <p>This year we've expanded with two brand new teachers
+            who will be focusing on new instruments... <a href="#">Read more</a></p>
+        </div>
+      </div>
+	  </div>
+	  
+      <div class="col-xs-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <div class="panel-title">Opening hours</div>
+          </div>
+            <div class="panel-body">
+				<p>Monday to Friday: 8am-8pm</p>
+				<p>Saturday: 10am-6pm</p>
+				<p>Sunday: Closed</p>
+	    	</div>
+        </div>
+      </div>
+    </div>
+	
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <div class="panel-title text-center">Become a student today!</div>
+          </div>
+          <div class="panel-body">
+			  <img  class="img-responsive" src="images/editing.jpg" alt="editing">
+			  <p> We give you all the tools you need to succeed. We have a great
+			  variety of instruments available for you to choose from.
+			  Learn to make music!</p>
+			</div>
+          <div class="panel-footer text-center">
+			  <button class="btn btn-primary">Become a student!</button>
+			</div>
+        </div>
+      </div>
+    </div>
+	
+  </div>
+	
+</div>
+
+<!-- This is the site footer - Copy this part to the other sites -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="main-footer-content col-md-4 col-md-offset-8">
+        <h3 class="text-center">
+        Keep up with us!
+        </h3>
+        <div class="social-links"> <a href="#"><i class="fa fa-facebook-official"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-instagram"></i></a> 
+		  </div>
+      </div>
+    </div>
+  </div>
 </footer>
+<!-- End of the footer -->
+	  
 <script src="js/jquery-1.11.3.min.js"></script> 
 <script src="js/bootstrap.js"></script>
 </body>
