added smooth-scroll and anchor to the start page

--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
 <!-- Start of Start-Page Content -->
 <!-- Start of the heroimg section-->
 <div class="heroimg">
-<img class="img-responsive hidden-xs hidden-sm" src="images/heroimg.png" alt="...">
+
 <h2 class="mobile-header text-center visible-xs visible-sm">We Make Music</h2>
+	<div class="anchor-start visible-lg">
+		<a href="#start-title">
+			<span class="glyphicon glyphicon-arrow-down"></span>
+		</a>
+	</div>
+	
 
 	<div class="container start-panels hidden-lg">
   <div class="row">
@@ -119,7 +125,7 @@
 <!-- End of heroimg section -->
 <div class="container-fluid">
 	<div class="row">
-	<h2 class="text-center">"Music is food for the soul"</h2>
+	<h2 class="text-center" id="start-title">"Music is food for the soul"</h2>
 	</div>
 	<div class="row">
 		<div class="col-xs-6 col-xs-offset-3">
@@ -220,8 +226,8 @@
   </div>
 </footer>
 <!-- End of the footer -->
-	  
 <script src="js/jquery-1.11.3.min.js"></script> 
+<script src="js/smooth-scroll.js"></script>
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
