--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
       
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1" ><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="#">Musicophone.com</a> </div>
+        <a class="navbar-brand" href="index.html">Musicophone.com</a> </div>
       
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="defaultNavbar1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Gallery</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
           <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Services<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Service 1</a></li>
-              <li><a href="#">Service 2</a></li>
+              <li><a href="all_services.html">All Services</a></li>
+              <li><a href="service_song.html">Song</a></li>
               <li><a href="#">Service 3</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Service 4</a></li>
@@ -159,7 +159,6 @@
 </div>
 	</div>
 	</div>
-<!-- This is the site footer - Copy this part to the other sites -->
 <!-- Start of large panels -->
 <div class="large-panels visible-lg">
 	<div class="row">
@@ -212,6 +211,7 @@
 	</div>
 </div>
 <!-- End of large panels -->
+<!-- This is the site footer - Copy this part to the other sites -->
 <footer class="site-footer">
   <div class="container">
     <div class="row">
