--- a/all_services.html
+++ b/all_services.html
@@ -18,12 +18,80 @@
     <link rel="stylesheet" href="css/bootstrap-darkly.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <!-- JavaScript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- Font icons -->
+    <script src="https://use.fontawesome.com/89454cd725.js"></script>
 </head>
 
 <body>
+
+    <!-- This is the header and navbar - re-use on all sites -->
+    <header class="site-header">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Musicophone.com</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="defaultNavbar1">
+                    <ul class="nav navbar-nav">
+                        <li class="active">
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Gallery</a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Services
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#">Service 1</a>
+                                </li>
+                                <li>
+                                    <a href="#">Service 2</a>
+                                </li>
+                                <li>
+                                    <a href="#">Service 3</a>
+                                </li>
+                                <li role="separator" class="divider"></li>
+                                <li>
+                                    <a href="#">Service 4</a>
+                                </li>
+                                <li>
+                                    <a href="#">Service 5</a>
+                                </li>
+                                <li>
+                                    <a href="#">Service 6</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                    </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+    </header>
+    <!-- End of header and navbar -->
 
     <!-- 
         BREADCRUMB
@@ -41,6 +109,9 @@
         </ol>
     </div>
 
+    <!--
+        MAIN CONTENT
+    -->
     <div class="container-fluid services">
         <div class="row equal">
             <!-- Song -->
@@ -146,6 +217,34 @@
         </div>
     </div>
 
+    <!-- This is the site footer - Copy this part to the other sites -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="main-footer-content col-md-4 col-md-offset-8">
+                    <h3 class="text-center">
+                        Keep up with us!
+                    </h3>
+                    <div class="social-links">
+                        <a href="#">
+                            <i class="fa fa-facebook-official"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End of the footer -->
+
+    <!-- JavaScript -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
