menu update dropdown and text

--- a/all_services.html
+++ b/all_services.html
@@ -36,51 +36,55 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Musicophone.com</a>
+                    <a class="navbar-brand" href="index.html">Musicophone.com</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="defaultNavbar1">
                     <ul class="nav navbar-nav">
-                        <li class="active">
-                            <a href="#">Home</a>
+                        <li>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="#">Gallery</a>
+                            <a href="gallery.html">Gallery</a>
                         </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Services
+                        <li class="dropdown active">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutoring
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#">Service 1</a>
-                                </li>
-                                <li>
-                                    <a href="#">Service 2</a>
-                                </li>
-                                <li>
-                                    <a href="#">Service 3</a>
+                                <li class="active">
+                                    <a href="#">Overview</a>
                                 </li>
                                 <li role="separator" class="divider"></li>
+                                <div class="dropdown-header">Specific tutoring</div>
                                 <li>
-                                    <a href="#">Service 4</a>
+                                    <a href="service_song.html">Song</a>
                                 </li>
                                 <li>
-                                    <a href="#">Service 5</a>
+                                    <a href="service_piano.html">Piano</a>
                                 </li>
                                 <li>
-                                    <a href="#">Service 6</a>
+                                    <a href="service_string.html">String</a>
+                                </li>
+                                <li>
+                                    <a href="service_brass.html">Brass</a>
+                                </li>
+                                <li>
+                                    <a href="service_percussion.html">Percussion</a>
+                                </li>
+                                <li>
+                                    <a href="service_guitar.html">Guitar</a>
                                 </li>
                             </ul>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#">About</a>
+                            <a href="about.html">About</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                     </ul>
                     </li>
@@ -104,7 +108,7 @@
                 </a>
             </li>
             <li class="active">
-                All Tutoring
+                Tutoring
             </li>
         </ol>
     </div>
@@ -243,8 +247,9 @@
     <!-- End of the footer -->
 
     <!-- JavaScript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/smooth-scroll.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
