--- a/index.html
+++ b/index.html
@@ -23,42 +23,74 @@
 <body>
 <!-- This is the header and navbar - re-use on all sites -->
 <header class="site-header">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid"> 
-      <!-- Brand and toggle get grouped for better mobile display -->
-      
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1" ><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="index.html">Musicophone.com</a> </div>
-      
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="defaultNavbar1">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Services<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="all_services.html">All Services</a></li>
-              <li><a href="service_song.html">Song</a></li>
-              <li><a href="#">Service 3</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Service 4</a></li>
-              <li><a href="#">Service 5</a></li>
-              <li><a href="#">Service 6</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        </li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse --> 
-    </div>
-    <!-- /.container-fluid --> 
-  </nav>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Musicophone.com</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="defaultNavbar1">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutoring
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#">Overview</a>
+                            </li>
+                            <li role="separator" class="divider"></li>
+                            <div class="dropdown-header">Specific tutoring</div>
+                            <li>
+                                <a href="service_song.html">Song</a>
+                            </li>
+                            <li>
+                                <a href="service_piano.html">Piano</a>
+                            </li>
+                            <li>
+                                <a href="service_string.html">String</a>
+                            </li>
+                            <li>
+                                <a href="service_brass.html">Brass</a>
+                            </li>
+                            <li>
+                                <a href="service_percussion.html">Percussion</a>
+                            </li>
+                            <li>
+                                <a href="service_guitar.html">Guitar</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 </header>
 <!-- End of header and navbar -->
 
