Added about.html and added extra images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#">Overview</a>
+                                <a href="all_services.html">Overview</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <div class="dropdown-header">Specific tutoring</div>
@@ -83,8 +83,6 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
-                </ul>
-                </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
