added service pages with contents

--- a/all_services.html
+++ b/all_services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 
 <head>
     <!-- The below 3 meta tags *must* come first in the head -->
@@ -9,7 +9,7 @@
 
     <!-- Site information -->
     <title>All Tutoring | Musicophones</title>
-    <meta name="description" content="">
+    <meta name="description" content="Learn an instrument or singing!">
     <meta name="keywords" content="music">
     <meta name="author" content="Andreas Lymalm, Rickard Lundby, Max">
 
