--- a/service_piano.html
+++ b/service_piano.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site information -->
-    <title>Song - Tutoring | Musicophones</title>
-    <meta name="description" content="Learn how to sing!">
-    <meta name="keywords" content="music, song">
+    <title>Piano - Tutoring | Musicophones</title>
+    <meta name="description" content="Learn how to play the piano!">
+    <meta name="keywords" content="music, piano">
     <meta name="author" content="Andreas Lymalm, Rickard Lundby, Max">
 
     <!-- Stylesheets -->
@@ -58,11 +58,11 @@
                                 </li>
                                 <li role="separator" class="divider"></li>
                                 <div class="dropdown-header">Specific tutoring</div>
-                                <li class="active">
-                                    <a href="#">Song</a>
-                                </li>
                                 <li>
-                                    <a href="service_piano.html">Piano</a>
+                                    <a href="service_song.html">Song</a>
+                                </li>
+                                <li class="active">
+                                    <a href="#">Piano</a>
                                 </li>
                                 <li>
                                     <a href="service_string.html">String</a>
@@ -111,7 +111,7 @@
                 <a href="all_services.html">Tutoring</a>
             </li>
             <li class="active">
-                Song
+                Piano
             </li>
         </ol>
     </div>
@@ -142,11 +142,12 @@
         <div id="info" class="tab-pane fade in active">
             <div class="row">
                 <div class="col-xs-12 col-sm-5">
-                    <img src="images/service_song.jpg" alt="Song" class="img-responsive">
+                    <img src="images/service_piano.jpg" alt="Piano" class="img-responsive">
                 </div>
                 <div class="col-xs-12 col-sm-7">
-                    <p class="lead">Do you hum melodies whitout being aware of it? Do you sing a solo part in the shower? Maybe it's time
-                        you develop your voice!
+                    <p class="lead">Have you always admired Robert Wells, how his hands just dances over the black and white blocks of wood
+                        that is the keyboard? Or how a piano can play any song? Then you should probably learn how to play
+                        the piano.
                     </p>
                 </div>
             </div>
