--- a/service_string.html
+++ b/service_string.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site information -->
-    <title>Song - Tutoring | Musicophones</title>
-    <meta name="description" content="Learn how to sing!">
-    <meta name="keywords" content="music, song">
+    <title>Strings - Tutoring | Musicophones</title>
+    <meta name="description" content="Learn how to play a string instrument!">
+    <meta name="keywords" content="music, strings">
     <meta name="author" content="Andreas Lymalm, Rickard Lundby, Max">
 
     <!-- Stylesheets -->
@@ -58,14 +58,14 @@
                                 </li>
                                 <li role="separator" class="divider"></li>
                                 <div class="dropdown-header">Specific tutoring</div>
-                                <li class="active">
-                                    <a href="#">Song</a>
+                                <li>
+                                    <a href="service_song.html">Song</a>
                                 </li>
                                 <li>
                                     <a href="service_piano.html">Piano</a>
                                 </li>
-                                <li>
-                                    <a href="service_string.html">String</a>
+                                <li class="active">
+                                    <a href="#">String</a>
                                 </li>
                                 <li>
                                     <a href="service_brass.html">Brass</a>
@@ -111,7 +111,7 @@
                 <a href="all_services.html">Tutoring</a>
             </li>
             <li class="active">
-                Song
+                String
             </li>
         </ol>
     </div>
@@ -142,11 +142,10 @@
         <div id="info" class="tab-pane fade in active">
             <div class="row">
                 <div class="col-xs-12 col-sm-5">
-                    <img src="images/service_song.jpg" alt="Song" class="img-responsive">
+                    <img src="images/service_string.jpg" alt="String" class="img-responsive">
                 </div>
                 <div class="col-xs-12 col-sm-7">
-                    <p class="lead">Do you hum melodies whitout being aware of it? Do you sing a solo part in the shower? Maybe it's time
-                        you develop your voice!
+                    <p class="lead">
                     </p>
                 </div>
             </div>
