added final text on all service page and specific service pages

--- a/all_services.html
+++ b/all_services.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_piano.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to sing? Then our professional tutors will teach you, with experience from
+                        <p>Do you want to learn how to play the piano? Then our professional tutors will teach you, with experience from
                             real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
@@ -160,7 +160,7 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_string.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to sing? Then our professional tutors will teach you, with experience from
+                        <p>Do you want to learn how to play a string instrument? Then our professional tutors will teach you, with experience from
                             real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
@@ -176,7 +176,7 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_brass.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to sing? Then our professional tutors will teach you, with experience from
+                        <p>Do you want to learn how to play a brass instrument? Then our professional tutors will teach you, with experience from
                             real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
@@ -190,11 +190,11 @@
             <div class="col-xs-12 col-sm-5 col-lg-3 col-sm-offset-1 col-lg-offset-0">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <div class="panel-title">Learn To Play the Percussion</div>
+                        <div class="panel-title">Learn To Play a Percussion instrument</div>
                     </div>
                     <div class="panel-body">
                         <img src="images/service_percussion.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to sing? Then our professional tutors will teach you, with experience from
+                        <p>Do you want to learn how to play a percussion instrument? Then our professional tutors will teach you, with experience from
                             real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
@@ -210,7 +210,7 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_guitar.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to sing? Then our professional tutors will teach you, with experience from
+                        <p>Do you want to learn how to play the guitar? Then our professional tutors will teach you, with experience from
                             real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
