--- a/service_guitar.html
+++ b/service_guitar.html
@@ -145,7 +145,8 @@
                     <img src="images/service_guitar.jpg" alt="Guitar" class="img-responsive">
                 </div>
                 <div class="col-xs-12 col-sm-7">
-                    <p class="lead">
+                    <p class="lead">Guitar solos. Yes, those awesome guitar solos. And just picking up the guitar everywhere. The guitar
+                        is so portable and amazing! We can teach you everything from the basic achords to advanced riffs.
                     </p>
                 </div>
             </div>
