--- a/service_percussion.html
+++ b/service_percussion.html
@@ -145,8 +145,8 @@
                     <img src="images/service_percussion.jpg" alt="Percussion" class="img-responsive">
                 </div>
                 <div class="col-xs-12 col-sm-7">
-                    <p class="lead">
-                    </p>
+                    <p class="lead">Are you one of those that love to keep the tempo, stamp your feet at every song? Choose a percussion
+                        instrument and you can be the one in control of it!
                 </div>
             </div>
             <div class="row">
@@ -159,11 +159,18 @@
                 </div>
                 <div class="col-xs-12 col-lg-6">
                     <h3>What we offer</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta quo ipsam, possimus ducimus neque deleniti,
-                        saepe officiis corrupti ipsa sapiente aut cupiditate adipisci enim quidem odit incidunt nihil, animi
-                        eum dolore est voluptates! Fuga omnis doloribus cum repudiandae ut sequi, nesciunt ex asperiores
-                        aperiam pariatur iusto officia, nemo blanditiis? Omnis aspernatur qui sequi rerum delectus, minima
-                        eligendi? Magnam quia earum a amet dolores nemo nihil, harum accusamus pariatur distinctio dolorum!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, voluptatum error? Praesentium modi
+                        optio, quam blanditiis iure ducimus necessitatibus natus doloremque harum qui rerum labore, obcaecati
+                        culpa voluptatibus alias veniam.</p>
+                    <h4>Drums</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos quod enim iure. Suscipit fugit,
+                        reprehenderit debitis reiciendis esse magnam. Possimus.</p>
+                    <h4>Xylophone</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quo quasi voluptatibus in nesciunt
+                        dicta labore animi repudiandae officia earum.</p>
+                    <h4>Various</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quo quasi voluptatibus in nesciunt
+                        dicta labore animi repudiandae officia earum.</p>
                 </div>
             </div>
         </div>
@@ -217,6 +224,14 @@
                             <span class="input-group-addon">+46</span>
                             <input type="tel" class="form-control" id="telephone" placeholder="Enter number without leading 0">
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="lessonType">Which instrument are you interested in? *</label>
+                        <select class="form-control" id="lessonType">
+                            <option>Drums</option>
+                            <option>Xylophone</option>
+                            <option>Various</option>
+                        </select>
                     </div>
                 </div>
                 <div class="col-md-6">
