--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 <div class="heroimg">
 
 <h2 class="mobile-header text-center visible-xs visible-sm">We Make Music</h2>
-	<div class="anchor-start visible-lg">
+	<div class="anchor-start visible-lg visible-md">
 		<a href="#start-title">
 			<span class="glyphicon glyphicon-arrow-down"></span>
 		</a>
 	</div>
 	
 
-	<div class="container start-panels hidden-lg">
+	<div class="container start-panels hidden-lg hidden-md">
   <div class="row">
     <div class="col-xs-6">
       <div class="panel panel-default">
@@ -158,7 +158,7 @@
 	<h2 class="text-center" id="start-title">"Music is food for the soul"</h2>
 	</div>
 	<div class="row">
-		<div class="col-xs-6 col-xs-offset-3">
+		<div class="col-xs-8 col-xs-offset-2 hidden-xs hidden-sm">
   <div id="carousel1" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carousel1" data-slide-to="0" class="active"></li>
@@ -190,9 +190,9 @@
 	</div>
 	</div>
 <!-- Start of large panels -->
-<div class="large-panels visible-lg">
+<div class="large-panels visible-lg visible-md-block">
 	<div class="row">
-		<div class="col-lg-3 col-lg-offset-3">
+		<div class="col-md-3 col-md-offset-3">
         <div class="panel panel-default">
           <div class="panel-heading">
             <div class="panel-title text-center">Become a student today!</div>
@@ -209,7 +209,7 @@
         </div>
       </div>
 		
-	<div class="col-lg-3">
+	<div class="col-md-3">
         <div class="panel panel-default">
           <div class="panel-heading">
             <div class="panel-title text-center">Become a student today!</div>
@@ -227,7 +227,7 @@
       </div>
 	</div>
 	<div class="row">
-		<div class="col-lg-6 col-lg-offset-3">
+		<div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-title">New classes!</div>
@@ -257,7 +257,7 @@
 </footer>
 <!-- End of the footer -->
 <script src="js/jquery-1.11.3.min.js"></script> 
-<script src="js/smooth-scroll.js"></script>
+
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
